--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "./src/index.js",
   "scripts": {
     "watch": "nodemon src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch1": "nodemon ./index.js"
+    
   },
   "author": "",
   "license": "ISC",
